--- a/client/src/components/getSchools.css
+++ b/client/src/components/getSchools.css
@@ -25,7 +25,7 @@
 .schoolListItem {
   width: 955px;
   min-height: 300px;
-  margin: 2em auto;
+  margin: 2em;
   padding: 1.5em;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -177,6 +177,11 @@
   font-size: 20px;
   color: gray;
   padding-right: 10px;
+}
+
+.msgCountSchool {
+  margin-left: 2em;
+  color: grey;
 }
 
 /* Star Rating */
