--- a/client/src/components/getSchools.css
+++ b/client/src/components/getSchools.css
@@ -85,7 +85,7 @@
 
 .review-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: right;
   font-size: 1em;
 }
